<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_rss">ListRssActivity</string>
    <string name="title_activity_show_rss">ShowRssActivity</string>
    <string name="title_activity_read_article">ReadArticleActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!--  -->
    <string name="img_description">my_image</string>
    <string name="google_plus_sign_in">Sign in with Google</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>
    <string name="twitter_plus_sign_in">Sign in with Twitter</string>
    <string name="get_started">Get Started</string>
    <string name="get_started_information">start using</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_information">Sign in with existed account</string>
    <string name="user_name">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_account"><u>Forgot username or password</u></string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="existed">Existed account ?</string>
    <!--  -->
    <string name="account_help">Account Help</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="forgot_email">Resend Confirmation Email</string>
    <!--  -->
    <string name="setting">Setting</string>
    <string name="account">Accounts</string>
    <string name="acc_description">Manage your account</string>
    <string name="language">Language</string>
    <string name="lang_description">Choose your language</string>
    <string name="theme">Theme</string>
    <string name="theme_description">Discover our theme</string>
    <string name="log_out">Log out</string>
    <!--  -->
    <string name="account_manager">Accounts</string>
    <string name="account_current">ACCOUNTS</string>
    <string name="account_social_network_name">Name of social network</string>
    <string name="account_username">User name in social network</string>
    <string name="account_ltt">LifeTime Technology</string>
    <string name="account_fb">Facebook</string>
    <string name="account_google">Google</string>
    <string name="account_twitter">Twitter</string>
    <string name="account_add">ADD AN ACCOUNT</string>
    <!--  -->
    <string name="account_profile">Profile</string>
    <string name="profile_fake">This is a profile, bla bla bla ....</string>
    <!--  -->
    <string name="newspaper">ABC paper</string>
    <string name="timer">1 min</string>
    <string name="title">this is a title</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="read_on_web">Read this article on the web</string>
    <!--  -->
    <string name="app_id">275032959348813</string>
    <string name="space"></string>
    <!--  -->
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <!--  -->
    <string name="urllabel">Url : </string>
    <string name="titlelabel">Title : </string>
    <string name="descriptionlabel">Description : </string>
    <string name="speak">speak</string>
    <!--  -->
    <string-array name="rss_category">
        <item>http://feeds.feedburner.com/tedtalks_video</item>
        <item>http://www.24h.com.vn/upload/rss/phithuongkyquac.rss</item>
        <item>http://dantri.com.vn/chuyen-la.rss</item>
        <item>http://www.thanhnien.com.vn/_layouts/newsrss.aspx</item>
        <item>http://vietbao.vn/rss2/trang-nhat.rss</item>
        <item>http://www.24h.com.vn/upload/rss/tintuctrongngay.rss</item>
        <item>http://vnexpress.net/rss/tin-moi-nhat.rss</item>
        <item>http://dantri.com.vn/trangchu.rss</item>
        <item>http://thethaongaynay.vn//rss/trangchu.xml</item>
        <item>http://thethao.tuoitre.vn/trang/rss</item>
        <item>http://vietbao.vn/live/Bong-da/rss.xml</item>
        <item>http://www.24h.com.vn/upload/rss/thethao.rss</item>
        <item>http://vnexpress.net/rss/the-thao.rss</item>
        <item>http://dantri.com.vn/The-Thao.rss</item>
        <item>http://www.baovanhoa.vn/Thethao.rss</item>
        <item>http://giaoduc.net.vn/RSS/Feed.aspx</item>
        <item>http://vietbao.vn/live/Giao-duc/rss.xml</item>
        <item>http://www.24h.com.vn/upload/rss/giaoducduhoc.rss</item>
        <item>http://dantri.com.vn/giaoduc-khuyenhoc.rss</item>
        <item>http://www.thanhnien.com.vn/_layouts/newsrss.aspx?Channel=Giáo+dục</item>
        <item>http://tuoitre.vn/Pages/RssFeeds.aspx?ChannelID=13</item>
        <item>http://www.baovanhoa.vn/giaoduc.rss</item>
        <item>http://vneconomy.vn/rss/trang-chu</item>
        <item>http://vietbao.vn/live/Kinh-te/rss.xml</item>
        <item>http://www.24h.com.vn/upload/rss/thitruongtieudung.rss</item>
        <item>http://baodientu.chinhphu.vn/_RSS_/7.rss</item>
        <item>http://vnexpress.net/rss/kinh-doanh.rss</item>
        <item>http://dantri.com.vn/kinhdoanh.rss</item>
        <item>http://www.thanhnien.com.vn/_layouts/newsrss.aspx?Channel=Kinh+tế</item>
        <item>http://tuoitre.vn/Pages/RssFeeds.aspx?ChannelID=11</item>
        <item>http://www.baovanhoa.vn/Kinhte.rss</item>
        <item>http://baodientu.chinhphu.vn/Rss/Feed.aspx?EventID=115</item>
        <item>http://vietbao.vn/live/Xa-hoi/rss.xml</item>
        <item>http://www.24h.com.vn/upload/rss/anninhhinhsu.rss</item>
        <item>http://vnexpress.net/rss/doi-song.rss</item>
        <item>http://dantri.com.vn/xa-hoi.rss</item>
        <item>http://www.thanhnien.com.vn/_layouts/newsrss.aspx?Channel=Chính+trị+-+Xã+hội</item>
        <item>http://tuoitre.vn/Pages/RssFeeds.aspx?ChannelID=3</item>
        <item>http://www.baovanhoa.vn/chinhtrixahoi.rss</item>
    </string-array>

    <string name="title_activity_account_help">AccountHelpActivity</string>
    <string name="title_activity_account_manage">AccountManageActivity</string>
    <string name="title_activity_account_profile">AccountProfileActivity</string>
    <string name="title_activity_show_webview">ShowWebviewActivity</string>

</resources>