<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zend.layout.StartUpActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/startup_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/img_description"
        android:rotation="45"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/startup_all_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible" >

        <Button
            android:id="@+id/startup_googlePlus_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_plus_sign_in" />

        <com.facebook.widget.LoginButton
            android:id="@+id/startup_facebook_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/startup_twitter_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/twitter_plus_sign_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="101" >

            <LinearLayout
                android:id="@+id/startup_get_started"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@drawable/transparent_button"
                android:clickable="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/get_started"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/get_started_information"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha=".3"
                android:background="#202020" />

            <LinearLayout
                android:id="@+id/startup_sign_in"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/transparent_button"
                android:clickable="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sign_in"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sign_in_information"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>