<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E6FFFFFF"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/itemrss_img_article"
        android:layout_width="120dip"
        android:layout_height="120dip"
        android:layout_margin="5dp"
        android:contentDescription="@string/img_description"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" >

            <ImageButton
                android:id="@+id/itemrss_img_newspaper"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/img_description"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher"
                android:visibility="visible" />

            <TextView
                android:id="@+id/itemrss_newspaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/itemrss_img_newspaper"
                android:text="@string/newspaper"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/itemrss_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/timer" />
        </RelativeLayout>

        <TextView
            android:id="@+id/itemrss_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="#e6000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>