<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ltt.intership.AccountProfileActivity$PlaceholderFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rss_bar_height"
        android:background="@color/default_background" >

        <ImageButton
            android:id="@+id/accManage_btn_back"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#f8f8f8"
            android:contentDescription="@string/img_description"
            android:scaleType="fitCenter"
            android:src="@drawable/act_back" />

        <TextView
            android:id="@+id/accProfile_social_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/account_fb"
            android:textColor="@color/default_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/accProfile_logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingRight="10dp"
            android:background="@color/default_background"
            android:text="@string/log_out"
            android:visibility="visible" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="#c0c0c0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img_description"
                android:src="@drawable/user_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:singleLine="true"
                android:text="@string/account_profile"
                android:textColor="@color/default_text_color"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_fake"
                android:textColor="@color/default_text_color"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>